Item display improvement related to bundle